Introduce StandardQueryOptions.PARTITIONED. Not fully wired but WIP